PL-Practica3/src/parser.output
Terminales no usados en la gramática

    PUNTO
    COMENT


Gramática

    0 $accept: Programa $end

    1 Programa: PROGRAM ID bloque
    2         | error bloque

    3 bloque: LLAVE_IZQ Declaracion Sentencias LLAVE_DER
    4       | LLAVE_IZQ Sentencias Declaracion LLAVE_DER
    5       | LLAVE_IZQ Declaracion Sentencias Declaracion LLAVE_DER
    6       | LLAVE_IZQ Declaracion LLAVE_DER
    7       | LLAVE_IZQ Sentencias LLAVE_DER
    8       | LLAVE_IZQ LLAVE_DER

    9 Declaracion: declarar_variable
   10            | declarar_funcion
   11            | Declaracion declarar_variable
   12            | Declaracion declarar_funcion

   13 declarar_variable: tipo_dato lista_ID PYC
   14                  | tipo_dato sentencia_asignacion
   15                  | tipo_dato lista_ID error
   16                  | error lista_ID PYC

   17 declarar_funcion: tipo_dato ID PAR_IZQ Parametros PAR_DER bloque
   18                 | tipo_dato ID PAR_IZQ PAR_DER bloque

   19 lista_ID: ID
   20         | lista_ID COMA ID
   21         | lista_ID ID error

   22 Parametros: tipo_dato ID
   23           | tipo_dato ID OP_ASIGNACION expresion
   24           | Parametros COMA tipo_dato ID
   25           | Parametros COMA tipo_dato ID OP_ASIGNACION expresion
   26           | ID error
   27           | Parametros tipo_dato error
   28           | tipo_dato error

   29 Sentencias: Sentencias Sentencia
   30           | Sentencia

   31 Sentencia: sentencia_asignacion
   32          | sentencia_if
   33          | sentencia_while
   34          | sentencia_entrada
   35          | sentencia_salida
   36          | sentencia_return
   37          | sentencia_repeat_until
   38          | sentencia_mover_lista
   39          | sentencia_comenzar_lista
   40          | sentencia_lista_aniadir_en
   41          | error PYC

   42 llamada_subprog: ID PAR_IZQ lista_expresiones_o_cadena PAR_DER
   43                | ID PAR_IZQ PAR_DER
   44                | ID PAR_IZQ lista_expresiones_o_cadena error

   45 sentencia_asignacion: ID OP_ASIGNACION expresion PYC
   46                     | ID OP_ASIGNACION COR_IZQ lista_expresiones_o_cadena COR_DER PYC
   47                     | ID OP_ASIGNACION error

   48 sentencia_if: IF PAR_IZQ expresion PAR_DER bloque sentencia_else_if
   49             | IF PAR_IZQ expresion bloque

   50 sentencia_else_if: ELSE IF PAR_IZQ expresion PAR_DER bloque sentencia_else_if
   51                  | sentencia_else
   52                  | ELSE IF PAR_IZQ expresion bloque

   53 sentencia_else: ELSE bloque
   54               | ε

   55 sentencia_while: WHILE PAR_IZQ lista_expresiones_o_cadena PAR_DER bloque
   56                | WHILE PAR_IZQ lista_expresiones_o_cadena bloque

   57 sentencia_entrada: INPUT PAR_IZQ lista_expresiones_o_cadena PAR_DER PYC
   58                  | INPUT PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS COMA lista_ID PAR_DER PYC
   59                  | INPUT PAR_IZQ lista_expresiones_o_cadena PAR_DER
   60                  | INPUT PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS COMA lista_ID PAR_DER error
   61                  | INPUT PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS lista_ID PAR_DER PYC
   62                  | INPUT PAR_IZQ COMILLAS lista_expresiones_o_cadena PAR_DER

   63 sentencia_salida: OUTPUT PAR_IZQ lista_expresiones_o_cadena PAR_DER PYC
   64                 | OUTPUT PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS PAR_DER PYC
   65                 | OUTPUT PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS COMA lista_ID PAR_DER PYC
   66                 | OUTPUT PAR_IZQ lista_expresiones_o_cadena PAR_DER error
   67                 | OUTPUT PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS PAR_DER error
   68                 | OUTPUT PAR_IZQ COMILLAS lista_expresiones_o_cadena PAR_DER
   69                 | OUTPUT PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS COMA lista_ID PAR_DER error
   70                 | OUTPUT PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS lista_ID PAR_DER PYC

   71 sentencia_return: RETURN expresion PYC
   72                 | RETURN PYC

   73 sentencia_repeat_until: REPEAT bloque UNTIL PAR_IZQ expresion PAR_DER PYC
   74                       | REPEAT bloque UNTIL PAR_IZQ expresion PAR_DER error

   75 sentencia_mover_lista: ID OP_LISTA PYC
   76                      | ID OP_LISTA ID PYC

   77 sentencia_comenzar_lista: OP_INIT_LISTA ID PYC
   78                         | ID OP_INIT_LISTA expresion PYC

   79 sentencia_lista_aniadir_en: ID OP_ACCESO expresion PYC
   80                           | ID OP_ACCESO expresion OP_INCREMENT expresion PYC
   81                           | ID OP_ACCESO expresion error

   82 lista_expresiones_o_cadena: expresion
   83                           | lista_expresiones_o_cadena COMA expresion

   84 expresion: expresion_binaria
   85          | expresion_unaria
   86          | llamada_subprog
   87          | constante
   88          | ID
   89          | PAR_IZQ expresion PAR_DER
   90          | PAR_IZQ expresion error

   91 expresion_binaria: expresion OP_SUM_RES expresion
   92                  | expresion OP_MULT expresion
   93                  | expresion MAYOR_QUE expresion
   94                  | expresion MENOR_QUE expresion
   95                  | expresion OP_LOGIC expresion
   96                  | expresion OP_AND expresion
   97                  | expresion OP_COMP expresion
   98                  | expresion OP_ARIT expresion
   99                  | expresion OP_DECREMENT expresion

  100 expresion_unaria: OP_INCREMENT expresion
  101                 | OP_DECREMENT expresion
  102                 | OP_R expresion
  103                 | OP_SUM_RES expresion
  104                 | OP_MULT expresion
  105                 | expresion OP_INCREMENT
  106                 | expresion OP_DECREMENT

  107 tipo_dato: TIPO_DATO
  108          | LISTA MENOR_QUE tipo_dato MAYOR_QUE

  109 constante: NUMERO
  110          | NUMERO END_FLOAT
  111          | CADENA
  112          | BOOL_VALUE
  113          | LETRA


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 2 15 16 21 26 27 28 41 44 47 60 66 67 69 74 81 90
    INPUT (258) 57 58 59 60 61 62
    OUTPUT (259) 63 64 65 66 67 68 69 70
    PROGRAM (260) 1
    ID (261) 1 17 18 19 20 21 22 23 24 25 26 42 43 44 45 46 47 75 76 77 78 79 80 81 88
    CADENA (262) 111
    IF (263) 48 49 50 52
    RETURN (264) 71 72
    WHILE (265) 55 56
    REPEAT (266) 73 74
    UNTIL (267) 73 74
    OP_ASIGNACION (268) 23 25 45 46 47
    PYC (269) 13 16 41 45 46 57 58 61 63 64 65 70 71 72 73 75 76 77 78 79 80
    COMA (270) 20 24 25 58 60 65 69 83
    PUNTO (271)
    COMILLAS (272) 58 60 61 62 64 65 67 68 69 70
    BOOL_VALUE (273) 112
    LETRA (274) 113
    NUMERO (275) 109 110
    COMENT (276)
    END_FLOAT (277) 110
    ELSE (278) 50 52 53
    TIPO_DATO (279) 107
    LISTA (280) 108
    PAR_IZQ (281) 17 18 42 43 44 48 49 50 52 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 73 74 89 90
    LLAVE_IZQ (282) 3 4 5 6 7 8
    COR_IZQ (283) 46
    MENOR_QUE (284) 94 108
    PAR_DER (285) 17 18 42 43 48 50 55 57 58 59 60 61 62 63 64 65 66 67 68 69 70 73 74 89
    LLAVE_DER (286) 3 4 5 6 7 8
    COR_DER (287) 46
    MAYOR_QUE (288) 93 108
    OP_SUM_RES (289) 91 103
    OP_MULT (290) 92 104
    OP_ARIT (291) 98
    OP_COMP (292) 97
    OP_LOGIC (293) 95
    OP_AND (294) 96
    OP_R (295) 102
    OP_INIT_LISTA (296) 77 78
    OP_INCREMENT (297) 80 100 105
    OP_DECREMENT (298) 99 101 106
    OP_LISTA (299) 75 76
    OP_ACCESO (300) 79 80 81


No terminales con las reglas donde aparecen

    $accept (46)
        on left: 0
    Programa (47)
        on left: 1 2
        on right: 0
    bloque (48)
        on left: 3 4 5 6 7 8
        on right: 1 2 17 18 48 49 50 52 53 55 56 73 74
    Declaracion (49)
        on left: 9 10 11 12
        on right: 3 4 5 6 11 12
    declarar_variable (50)
        on left: 13 14 15 16
        on right: 9 11
    declarar_funcion (51)
        on left: 17 18
        on right: 10 12
    lista_ID (52)
        on left: 19 20 21
        on right: 13 15 16 20 21 58 60 61 65 69 70
    Parametros (53)
        on left: 22 23 24 25 26 27 28
        on right: 17 24 25 27
    Sentencias (54)
        on left: 29 30
        on right: 3 4 5 7 29
    Sentencia (55)
        on left: 31 32 33 34 35 36 37 38 39 40 41
        on right: 29 30
    llamada_subprog (56)
        on left: 42 43 44
        on right: 86
    sentencia_asignacion (57)
        on left: 45 46 47
        on right: 14 31
    sentencia_if (58)
        on left: 48 49
        on right: 32
    sentencia_else_if (59)
        on left: 50 51 52
        on right: 48 50
    sentencia_else (60)
        on left: 53 54
        on right: 51
    sentencia_while (61)
        on left: 55 56
        on right: 33
    sentencia_entrada (62)
        on left: 57 58 59 60 61 62
        on right: 34
    sentencia_salida (63)
        on left: 63 64 65 66 67 68 69 70
        on right: 35
    sentencia_return (64)
        on left: 71 72
        on right: 36
    sentencia_repeat_until (65)
        on left: 73 74
        on right: 37
    sentencia_mover_lista (66)
        on left: 75 76
        on right: 38
    sentencia_comenzar_lista (67)
        on left: 77 78
        on right: 39
    sentencia_lista_aniadir_en (68)
        on left: 79 80 81
        on right: 40
    lista_expresiones_o_cadena (69)
        on left: 82 83
        on right: 42 44 46 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 83
    expresion (70)
        on left: 84 85 86 87 88 89 90
        on right: 23 25 45 48 49 50 52 71 73 74 78 79 80 81 82 83 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
    expresion_binaria (71)
        on left: 91 92 93 94 95 96 97 98 99
        on right: 84
    expresion_unaria (72)
        on left: 100 101 102 103 104 105 106
        on right: 85
    tipo_dato (73)
        on left: 107 108
        on right: 13 14 15 17 18 22 23 24 25 27 28 108
    constante (74)
        on left: 109 110 111 112 113
        on right: 87


Estado 0

    0 $accept: • Programa $end

    error    desplazar e ir al estado 1
    PROGRAM  desplazar e ir al estado 2

    Programa  ir al estado 3


Estado 1

    2 Programa: error • bloque

    LLAVE_IZQ  desplazar e ir al estado 4

    bloque  ir al estado 5


Estado 2

    1 Programa: PROGRAM • ID bloque

    ID  desplazar e ir al estado 6


Estado 3

    0 $accept: Programa • $end

    $end  desplazar e ir al estado 7


Estado 4

    3 bloque: LLAVE_IZQ • Declaracion Sentencias LLAVE_DER
    4       | LLAVE_IZQ • Sentencias Declaracion LLAVE_DER
    5       | LLAVE_IZQ • Declaracion Sentencias Declaracion LLAVE_DER
    6       | LLAVE_IZQ • Declaracion LLAVE_DER
    7       | LLAVE_IZQ • Sentencias LLAVE_DER
    8       | LLAVE_IZQ • LLAVE_DER

    error          desplazar e ir al estado 8
    INPUT          desplazar e ir al estado 9
    OUTPUT         desplazar e ir al estado 10
    ID             desplazar e ir al estado 11
    IF             desplazar e ir al estado 12
    RETURN         desplazar e ir al estado 13
    WHILE          desplazar e ir al estado 14
    REPEAT         desplazar e ir al estado 15
    TIPO_DATO      desplazar e ir al estado 16
    LISTA          desplazar e ir al estado 17
    LLAVE_DER      desplazar e ir al estado 18
    OP_INIT_LISTA  desplazar e ir al estado 19

    Declaracion                 ir al estado 20
    declarar_variable           ir al estado 21
    declarar_funcion            ir al estado 22
    Sentencias                  ir al estado 23
    Sentencia                   ir al estado 24
    sentencia_asignacion        ir al estado 25
    sentencia_if                ir al estado 26
    sentencia_while             ir al estado 27
    sentencia_entrada           ir al estado 28
    sentencia_salida            ir al estado 29
    sentencia_return            ir al estado 30
    sentencia_repeat_until      ir al estado 31
    sentencia_mover_lista       ir al estado 32
    sentencia_comenzar_lista    ir al estado 33
    sentencia_lista_aniadir_en  ir al estado 34
    tipo_dato                   ir al estado 35


Estado 5

    2 Programa: error bloque •

    $default  reduce usando la regla 2 (Programa)


Estado 6

    1 Programa: PROGRAM ID • bloque

    LLAVE_IZQ  desplazar e ir al estado 4

    bloque  ir al estado 36


Estado 7

    0 $accept: Programa $end •

    $default  aceptar


Estado 8

   16 declarar_variable: error • lista_ID PYC
   41 Sentencia: error • PYC

    ID   desplazar e ir al estado 37
    PYC  desplazar e ir al estado 38

    lista_ID  ir al estado 39


Estado 9

   57 sentencia_entrada: INPUT • PAR_IZQ lista_expresiones_o_cadena PAR_DER PYC
   58                  | INPUT • PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS COMA lista_ID PAR_DER PYC
   59                  | INPUT • PAR_IZQ lista_expresiones_o_cadena PAR_DER
   60                  | INPUT • PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS COMA lista_ID PAR_DER error
   61                  | INPUT • PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS lista_ID PAR_DER PYC
   62                  | INPUT • PAR_IZQ COMILLAS lista_expresiones_o_cadena PAR_DER

    PAR_IZQ  desplazar e ir al estado 40


Estado 10

   63 sentencia_salida: OUTPUT • PAR_IZQ lista_expresiones_o_cadena PAR_DER PYC
   64                 | OUTPUT • PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS PAR_DER PYC
   65                 | OUTPUT • PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS COMA lista_ID PAR_DER PYC
   66                 | OUTPUT • PAR_IZQ lista_expresiones_o_cadena PAR_DER error
   67                 | OUTPUT • PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS PAR_DER error
   68                 | OUTPUT • PAR_IZQ COMILLAS lista_expresiones_o_cadena PAR_DER
   69                 | OUTPUT • PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS COMA lista_ID PAR_DER error
   70                 | OUTPUT • PAR_IZQ COMILLAS lista_expresiones_o_cadena COMILLAS lista_ID PAR_DER PYC

    PAR_IZQ  desplazar e ir al estado 41


Estado 11

   45 sentencia_asignacion: ID • OP_ASIGNACION expresion PYC
   46                     | ID • OP_ASIGNACION COR_IZQ lista_expresiones_o_cadena COR_DER PYC
   47                     | ID • OP_ASIGNACION error
   75 sentencia_mover_lista: ID • OP_LISTA PYC
   76                      | ID • OP_LISTA ID PYC
   78 sentencia_comenzar_lista: ID • OP_INIT_LISTA expresion PYC
   79 sentencia_lista_aniadir_en: ID • OP_ACCESO expresion PYC
   80                           | ID • OP_ACCESO expresion OP_INCREMENT expresion PYC
   81                           | ID • OP_ACCESO expresion error

    OP_ASIGNACION  desplazar e ir al estado 42
    OP_INIT_LISTA  desplazar e ir al estado 43
    OP_LISTA       desplazar e ir al estado 44
    OP_ACCESO      desplazar e ir al estado 45


Estado 12

   48 sentencia_if: IF • PAR_IZQ expresion PAR_DER bloque sentencia_else_if
   49             | IF • PAR_IZQ expresion bloque

    PAR_IZQ  desplazar e ir al estado 46


Estado 13

   71 sentencia_return: RETURN • expresion PYC
   72                 | RETURN • PYC

    ID            desplazar e ir al estado 47
    CADENA        desplazar e ir al estado 48
    PYC           desplazar e ir al estado 49
    BOOL_VALUE    desplazar e ir al estado 50
    LETRA         desplazar e ir al estado 51
    NUMERO        desplazar e ir al estado 52
    PAR_IZQ       desplazar e ir al estado 53
    OP_SUM_RES    desplazar e ir al estado 54
    OP_MULT       desplazar e ir al estado 55
    OP_R          desplazar e ir al estado 56
    OP_INCREMENT  desplazar e ir al estado 57
    OP_DECREMENT  desplazar e ir al estado 58

    llamada_subprog    ir al estado 59
    expresion          ir al estado 60
    expresion_binaria  ir al estado 61
    expresion_unaria   ir al estado 62
    constante          ir al estado 63


Estado 14

   55 sentencia_while: WHILE • PAR_IZQ lista_expresiones_o_cadena PAR_DER bloque
   56                | WHILE • PAR_IZQ lista_expresiones_o_cadena bloque

    PAR_IZQ  desplazar e ir al estado 64


Estado 15

   73 sentencia_repeat_until: REPEAT • bloque UNTIL PAR_IZQ expresion PAR_DER PYC
   74                       | REPEAT • bloque UNTIL PAR_IZQ expresion PAR_DER error

    LLAVE_IZQ  desplazar e ir al estado 4

    bloque  ir al estado 65


Estado 16

  107 tipo_dato: TIPO_DATO •

    $default  reduce usando la regla 107 (tipo_dato)


Estado 17

  108 tipo_dato: LISTA • MENOR_QUE tipo_dato MAYOR_QUE

    MENOR_QUE  desplazar e ir al estado 66


Estado 18

    8 bloque: LLAVE_IZQ LLAVE_DER •

    $default  reduce usando la regla 8 (bloque)


Estado 19

   77 sentencia_comenzar_lista: OP_INIT_LISTA • ID PYC

    ID  desplazar e ir al estado 67


Estado 20

    3 bloque: LLAVE_IZQ Declaracion • Sentencias LLAVE_DER
    5       | LLAVE_IZQ Declaracion • Sentencias Declaracion LLAVE_DER
    6       | LLAVE_IZQ Declaracion • LLAVE_DER
   11 Declaracion: Declaracion • declarar_variable
   12            | Declaracion • declarar_funcion

    error          desplazar e ir al estado 8
    INPUT          desplazar e ir al estado 9
    OUTPUT         desplazar e ir al estado 10
    ID             desplazar e ir al estado 11
    IF             desplazar e ir al estado 12
    RETURN         desplazar e ir al estado 13
    WHILE          desplazar e ir al estado 14
    REPEAT         desplazar e ir al estado 15
    TIPO_DATO      desplazar e ir al estado 16
    LISTA          desplazar e ir al estado 17
    LLAVE_DER      desplazar e ir al estado 68
    OP_INIT_LISTA  desplazar e ir al estado 19

    declarar_variable           ir al estado 69
    declarar_funcion            ir al estado 70
    Sentencias                  ir al estado 71
    Sentencia                   ir al estado 24
    sentencia_asignacion        ir al estado 25
    sentencia_if                ir al estado 26
    sentencia_while             ir al estado 27
    sentencia_entrada           ir al estado 28
    sentencia_salida            ir al estado 29
    sentencia_return            ir al estado 30
    sentencia_repeat_until      ir al estado 31
    sentencia_mover_lista       ir al estado 32
    sentencia_comenzar_lista    ir al estado 33
    sentencia_lista_aniadir_en  ir al estado 34
    tipo_dato                   ir al estado 35


Estado 21

    9 Declaracion: declarar_variable •

    $default  reduce usando la regla 9 (Declaracion)


Estado 22

   10 Declaracion: declarar_funcion •

    $default  reduce usando la regla 10 (Declaracion)


Estado 23

    4 bloque: LLAVE_IZQ Sentencias • Declaracion LLAVE_DER
    7       | LLAVE_IZQ Sentencias • LLAVE_DER
   29 Sentencias: Sentencias • Sentencia

    error          desplazar e ir al estado 8
    INPUT          desplazar e ir al estado 9
    OUTPUT         desplazar e ir al estado 10
    ID             desplazar e ir al estado 11
    IF             desplazar e ir al estado 12
    RETURN         desplazar e ir al estado 13
    WHILE          desplazar e ir al estado 14
    REPEAT         desplazar e ir al estado 15
    TIPO_DATO      desplazar e ir al estado 16
    LISTA          desplazar e ir al estado 17
    LLAVE_DER      desplazar e ir al estado 72
    OP_INIT_LISTA  desplazar e ir al estado 19

    Declaracion                 ir al estado 73
    declarar_variable           ir al estado 21
    declarar_funcion            ir al estado 22
    Sentencia                   ir al estado 74
    sentencia_asignacion        ir al estado 25
    sentencia_if                ir al estado 26
    sentencia_while             ir al estado 27
    sentencia_entrada           ir al estado 28
    sentencia_salida            ir al estado 29
    sentencia_return            ir al estado 30
    sentencia_repeat_until      ir al estado 31
    sentencia_mover_lista       ir al estado 32
    sentencia_comenzar_lista    ir al estado 33
    sentencia_lista_aniadir_en  ir al estado 34
    tipo_dato                   ir al estado 35


Estado 24

   30 Sentencias: Sentencia •

    $default  reduce usando la regla 30 (Sentencias)


Estado 25

   31 Sentencia: sentencia_asignacion •

    $default  reduce usando la regla 31 (Sentencia)


Estado 26

   32 Sentencia: sentencia_if •

    $default  reduce usando la regla 32 (Sentencia)


Estado 27

   33 Sentencia: sentencia_while •

    $default  reduce usando la regla 33 (Sentencia)


Estado 28

   34 Sentencia: sentencia_entrada •

    $default  reduce usando la regla 34 (Sentencia)


Estado 29

   35 Sentencia: sentencia_salida •

    $default  reduce usando la regla 35 (Sentencia)


Estado 30

   36 Sentencia: sentencia_return •

    $default  reduce usando la regla 36 (Sentencia)


Estado 31

   37 Sentencia: sentencia_repeat_until •

    $default  reduce usando la regla 37 (Sentencia)


Estado 32

   38 Sentencia: sentencia_mover_lista •

    $default  reduce usando la regla 38 (Sentencia)


Estado 33

   39 Sentencia: sentencia_comenzar_lista •

    $default  reduce usando la regla 39 (Sentencia)


Estado 34

   40 Sentencia: sentencia_lista_aniadir_en •

    $default  reduce usando la regla 40 (Sentencia)


Estado 35

   13 declarar_variable: tipo_dato • lista_ID PYC
   14                  | tipo_dato • sentencia_asignacion
   15                  | tipo_dato • lista_ID error
   17 declarar_funcion: tipo_dato • ID PAR_IZQ Parametros PAR_DER bloque
   18                 | tipo_dato • ID PAR_IZQ PAR_DER bloque

    ID  desplazar e ir al estado 75

    lista_ID              ir al estado 76
    sentencia_asignacion  ir al estado 77


Estado 36

    1 Programa: PROGRAM ID bloque •

    $default  reduce usando la regla 1 (Programa)


Estado 37

   19 lista_ID: ID •

    $default  reduce usando la regla 19 (lista_ID)


Estado 38

   41 Sentencia: error PYC •

    $default  reduce usando la regla 41 (Sentencia)


Estado 39

   16 declarar_variable: error lista_ID • PYC
   20 lista_ID: lista_ID • COMA ID
   21         | lista_ID • ID error

    ID    desplazar e ir al estado 78
    PYC   desplazar e ir al estado 79
    COMA  desplazar e ir al estado 80


Estado 40

   57 sentencia_entrada: INPUT PAR_IZQ • lista_expresiones_o_cadena PAR_DER PYC
   58                  | INPUT PAR_IZQ • COMILLAS lista_expresiones_o_cadena COMILLAS COMA lista_ID PAR_DER PYC
   59                  | INPUT PAR_IZQ • lista_expresiones_o_cadena PAR_DER
   60                  | INPUT PAR_IZQ • COMILLAS lista_expresiones_o_cadena COMILLAS COMA lista_ID PAR_DER error
   61                  | INPUT PAR_IZQ • COMILLAS lista_expresiones_o_cadena COMILLAS lista_ID PAR_DER PYC
   62                  | INPUT PAR_IZQ • COMILLAS lista_expresiones_o_cadena PAR_DER
